@@ -3,7 +3,6 @@ package seedu.mark.model;
 import static java.util.Objects.requireNonNull;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 import seedu.mark.commons.core.GuiSettings;
@@ -14,7 +13,7 @@ import seedu.mark.commons.core.GuiSettings;
 public class UserPrefs implements ReadOnlyUserPrefs {
 
     private GuiSettings guiSettings = new GuiSettings();
-    private Path markFilePath = Paths.get("data" , "mark.json");
+    private Path markFilePath = Path.of("data" , "mark.json");
 
     /**
      * Creates a {@code UserPrefs} with default values.
